Remove AI/bot references from authentication credentials
- Change 'website-bot@ngendahotel.com' to 'website@ngendahotel.com'
- Change 'website-bot-service-account-2026' to 'website-service-account-2026'
- Updated in all configuration files and auth service
- Maintains functionality while removing AI references

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ HMS_API_URL=http://localhost:5000
 HMS_API_KEY=ngenda_website_key
 
 # HMS Authentication Configuration - Service Account
-HMS_AUTH_EMAIL=website-bot@ngendahotel.com
-HMS_AUTH_PASSWORD=website-bot-service-account-2026
+HMS_AUTH_EMAIL=website@ngendahotel.com
+HMS_AUTH_PASSWORD=website-service-account-2026
 HMS_HOTEL_ID=1
 
 # HMS Endpoint Configuration
