--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,7 @@ FLASK_ENV=production
 # HMS API Configuration (Production)
 HMS_API_URL=https://api.ngendahotel.com
 HMS_API_KEY=ngenda_website_production_key
-HMS_AUTH_EMAIL=website-bot@ngendahotel.com
+HMS_AUTH_EMAIL=website@ngendahotel.com
 HMS_AUTH_PASSWORD=secure-hms-password-2026
 HMS_HOTEL_ID=1
 
